// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalComponent should render 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ModalComponent
    isOpen={false}
    location={null}
    onRequestClose={[Function]}
    title={null}
  >
    Lorem
  </ModalComponent>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ariaHideApp": true,
      "bodyOpenClassName": "ReactModal__Body--open",
      "children": Array [
        null,
        <div
          className="scroll"
        >
          Lorem
        </div>,
      ],
      "className": "content",
      "closeTimeoutMS": 0,
      "contentLabel": "Modal",
      "isOpen": false,
      "onRequestClose": [Function],
      "overlayClassName": "overlay",
      "parentSelector": [Function],
      "portalClassName": "root",
      "shouldCloseOnEsc": true,
      "shouldCloseOnOverlayClick": true,
      "shouldFocusAfterRender": true,
      "shouldReturnFocusAfterClose": true,
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem",
          "className": "scroll",
        },
        "ref": null,
        "rendered": "Lorem",
        "type": "div",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaHideApp": true,
        "bodyOpenClassName": "ReactModal__Body--open",
        "children": Array [
          null,
          <div
            className="scroll"
          >
            Lorem
          </div>,
        ],
        "className": "content",
        "closeTimeoutMS": 0,
        "contentLabel": "Modal",
        "isOpen": false,
        "onRequestClose": [Function],
        "overlayClassName": "overlay",
        "parentSelector": [Function],
        "portalClassName": "root",
        "shouldCloseOnEsc": true,
        "shouldCloseOnOverlayClick": true,
        "shouldFocusAfterRender": true,
        "shouldReturnFocusAfterClose": true,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem",
            "className": "scroll",
          },
          "ref": null,
          "rendered": "Lorem",
          "type": "div",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ModalComponent should render 2`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ModalComponent
    isOpen={true}
    location={null}
    onRequestClose={[Function]}
    title={null}
  >
    Lorem
  </ModalComponent>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ariaHideApp": true,
      "bodyOpenClassName": "ReactModal__Body--open",
      "children": Array [
        null,
        <div
          className="scroll"
        >
          Lorem
        </div>,
      ],
      "className": "content",
      "closeTimeoutMS": 0,
      "contentLabel": "Modal",
      "isOpen": true,
      "onRequestClose": [Function],
      "overlayClassName": "overlay",
      "parentSelector": [Function],
      "portalClassName": "root",
      "shouldCloseOnEsc": true,
      "shouldCloseOnOverlayClick": true,
      "shouldFocusAfterRender": true,
      "shouldReturnFocusAfterClose": true,
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem",
          "className": "scroll",
        },
        "ref": null,
        "rendered": "Lorem",
        "type": "div",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaHideApp": true,
        "bodyOpenClassName": "ReactModal__Body--open",
        "children": Array [
          null,
          <div
            className="scroll"
          >
            Lorem
          </div>,
        ],
        "className": "content",
        "closeTimeoutMS": 0,
        "contentLabel": "Modal",
        "isOpen": true,
        "onRequestClose": [Function],
        "overlayClassName": "overlay",
        "parentSelector": [Function],
        "portalClassName": "root",
        "shouldCloseOnEsc": true,
        "shouldCloseOnOverlayClick": true,
        "shouldFocusAfterRender": true,
        "shouldReturnFocusAfterClose": true,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem",
            "className": "scroll",
          },
          "ref": null,
          "rendered": "Lorem",
          "type": "div",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ModalComponent should render 3`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ModalComponent
    isOpen={true}
    location={null}
    onRequestClose={[Function]}
    title="Lorem"
  >
    Lorem
  </ModalComponent>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ariaHideApp": true,
      "bodyOpenClassName": "ReactModal__Body--open",
      "children": Array [
        <div
          className="title"
        >
          <FormLegend
            isOffset={true}
          >
            Lorem
          </FormLegend>
        </div>,
        <div
          className="scroll scrollHasTitle"
        >
          Lorem
        </div>,
      ],
      "className": "content",
      "closeTimeoutMS": 0,
      "contentLabel": "Modal",
      "isOpen": true,
      "onRequestClose": [Function],
      "overlayClassName": "overlay",
      "parentSelector": [Function],
      "portalClassName": "root",
      "shouldCloseOnEsc": true,
      "shouldCloseOnOverlayClick": true,
      "shouldFocusAfterRender": true,
      "shouldReturnFocusAfterClose": true,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": <FormLegend
            isOffset={true}
          >
            Lorem
          </FormLegend>,
          "className": "title",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Lorem",
            "isOffset": true,
          },
          "ref": null,
          "rendered": "Lorem",
          "type": [Function],
        },
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem",
          "className": "scroll scrollHasTitle",
        },
        "ref": null,
        "rendered": "Lorem",
        "type": "div",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaHideApp": true,
        "bodyOpenClassName": "ReactModal__Body--open",
        "children": Array [
          <div
            className="title"
          >
            <FormLegend
              isOffset={true}
            >
              Lorem
            </FormLegend>
          </div>,
          <div
            className="scroll scrollHasTitle"
          >
            Lorem
          </div>,
        ],
        "className": "content",
        "closeTimeoutMS": 0,
        "contentLabel": "Modal",
        "isOpen": true,
        "onRequestClose": [Function],
        "overlayClassName": "overlay",
        "parentSelector": [Function],
        "portalClassName": "root",
        "shouldCloseOnEsc": true,
        "shouldCloseOnOverlayClick": true,
        "shouldFocusAfterRender": true,
        "shouldReturnFocusAfterClose": true,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": <FormLegend
              isOffset={true}
            >
              Lorem
            </FormLegend>,
            "className": "title",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Lorem",
              "isOffset": true,
            },
            "ref": null,
            "rendered": "Lorem",
            "type": [Function],
          },
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem",
            "className": "scroll scrollHasTitle",
          },
          "ref": null,
          "rendered": "Lorem",
          "type": "div",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`ModalComponent should render 4`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ModalComponent
    isOpen={true}
    location={null}
    onRequestClose={[Function]}
    title={null}
    type="lorem"
  >
    Lorem
  </ModalComponent>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "ariaHideApp": true,
      "bodyOpenClassName": "ReactModal__Body--open",
      "children": Array [
        null,
        <div
          className="scroll"
        >
          Lorem
        </div>,
      ],
      "className": "contentLorem content",
      "closeTimeoutMS": 0,
      "contentLabel": "Modal",
      "isOpen": true,
      "onRequestClose": [Function],
      "overlayClassName": "overlay",
      "parentSelector": [Function],
      "portalClassName": "root",
      "shouldCloseOnEsc": true,
      "shouldCloseOnOverlayClick": true,
      "shouldFocusAfterRender": true,
      "shouldReturnFocusAfterClose": true,
    },
    "ref": null,
    "rendered": Array [
      null,
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "Lorem",
          "className": "scroll",
        },
        "ref": null,
        "rendered": "Lorem",
        "type": "div",
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "ariaHideApp": true,
        "bodyOpenClassName": "ReactModal__Body--open",
        "children": Array [
          null,
          <div
            className="scroll"
          >
            Lorem
          </div>,
        ],
        "className": "contentLorem content",
        "closeTimeoutMS": 0,
        "contentLabel": "Modal",
        "isOpen": true,
        "onRequestClose": [Function],
        "overlayClassName": "overlay",
        "parentSelector": [Function],
        "portalClassName": "root",
        "shouldCloseOnEsc": true,
        "shouldCloseOnOverlayClick": true,
        "shouldFocusAfterRender": true,
        "shouldReturnFocusAfterClose": true,
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "Lorem",
            "className": "scroll",
          },
          "ref": null,
          "rendered": "Lorem",
          "type": "div",
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
